<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_normal"
    android:layout_marginTop="?android:actionBarSize"
    android:layout_marginEnd="@dimen/margin_normal">

    <TextView
        android:id="@+id/tvSignInTitle"
        style="@style/TextBigTitleStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/register"
        android:textColor="@color/textPrimaryColor"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editPhone"
        style="@style/EditInputStyle"
        android:layout_marginStart="@dimen/margin_tiny"
        android:layout_marginTop="@dimen/margin_larger"
        android:layout_marginEnd="@dimen/margin_tiny"
        android:hint="@string/account_enter_address"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="50"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:outlineSpotShadowColor="@color/colorPrimary"
        android:paddingStart="@dimen/edit_item_margin_start"
        android:shadowColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tvSignInTitle"
        tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />

    <TextView
        android:id="@+id/tvPhone"
        style="@style/EditInputStyle"
        android:layout_marginStart="@dimen/margin_tiny"
        android:gravity="center_vertical"
        android:text="@string/account_address"
        app:layout_constraintBottom_toBottomOf="@id/editPhone"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/EditInputStyle"
        android:layout_marginStart="@dimen/margin_tiny"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_tiny"
        android:hint="@string/account_enter_password"
        android:imeOptions="actionGo"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="50"
        android:paddingStart="@dimen/edit_item_margin_start"
        app:layout_constraintTop_toBottomOf="@id/editPhone"
        tools:ignore="MissingConstraints,RtlSymmetry,UnusedAttribute" />

    <TextView
        android:id="@+id/tvPassword"
        style="@style/EditInputStyle"
        android:layout_marginStart="@dimen/margin_tiny"
        android:gravity="center_vertical"
        android:text="@string/account_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editPassword" />


    <Button
        android:id="@+id/btnRegister"
        style="@style/ButtonWithBlackSelectorStyle"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
